--- a/SpaceWars/WebContent/content/html/gameThree.html
+++ b/SpaceWars/WebContent/content/html/gameThree.html
@@ -377,7 +377,7 @@
 	<div>
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<br> <br> <br> <img
+			<img
 					src="../resources/images/planets/erde.png" alt="...">
 				<h4 class="white">
 					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
@@ -422,7 +422,7 @@
 
 
 			<div class="col-md-6 text-center">
-				<br> <br> <br> <img
+				 <img
 					src="../resources/images/planets/caprica.png" alt="...">
 				<h4 class="white">
 					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
