--- a/SpaceWars/WebContent/content/html/menuManual.html
+++ b/SpaceWars/WebContent/content/html/menuManual.html
@@ -61,19 +61,20 @@
 			<div class="col-md-12">
 
 				<h4>Hallo Commander, wir heißen Sie noch einmal willkommen!</h4>
-				<br /> SpaceWars ist ein Rundenbasiertes Onlinespiel, in dem es
-				darum geht alle Planeten des Universums in Ihre Gewalt zu bringen.
-				Im Spiel können Sie Schiffe kaufen und auf Planeten schicken.
-				Zerstören Sie die Schiffe Ihres Gegenspielers gehört der Planet
-				Ihnen.<br /> Als neuer Gouverneur stehen Ihnen natürlich die
-				eingetriebenen Steuern des Planeten zu Verfügung. Von dem Gewonnenen
-				Geld können Sie weitere Schiffe zu ihrer Flotte hinzufügen können.
+				<br /> SpaceWars ist ein rundenbasiertes Onlinespiel, in dem es
+				darum geht, die Herrschaft über alle Planeten des Universums zu
+				gewinnen. Im Spiel können Sie Schiffe kaufen und auf Planeten
+				schicken. Der Planet gehört Ihnen, wenn es Ihnen gelingt, alle
+				gegnerischen Raumschiffe zu zerstören.<br /> Als neuer Gouverneur
+				stehen Ihnen natürlich die eingetriebenen Steuern des Planeten zur
+				Verfügung. Von dem gewonnenen Geld können Sie weitere Schiffe zu
+				ihrer Flotte hinzufügen.
 				<h4>Spielmodi...</h4>
 				<em>Einzelspieler:</em> Der Einzelspielermodus ist über den
 				Menüpunkt „Scharmützel“ zu erreichen. Hier kann zunächst die
 				Kartengröße gewählt werden. Entscheiden Sie sich zwischen drei, fünf
 				oder sieben Planeten. Nach dieser Einstellung geht es los… <br />
-				Sie kämpfen gegen den Computer. Ein kleiner Tipp: unterschätzen Sie
+				Sie kämpfen gegen den Computer. Ein kleiner Tipp: Unterschätzen Sie
 				ihn niemals!<br />
 				<br /> <em>Mehrspieler:</em> Der Mehrspielermodus gliedert sich in
 				zwei Untermodi auf. Sie können mit einem zweiten Commander gegen den
@@ -81,34 +82,35 @@
 				beiden Fällen muss einer von Ihnen ein Spiel erstellen, der zweite
 				Spieler kann diesem Spiel beitreten. <br /> Um das Spiel zu
 				erstellen wählen Sie zunächst die Kartengröße und bestimmen
-				anschießend zwischen Player vs. Player oder Player - Player Vs
-				Computer. <br /> Ihr Partner kann über „Mehrspieler“ =>
-				„Spielbeitreten“ zur Lobby gelangen. Hier liegen alle erstellten
-				Spiele. Über den Spielnamen oder den Namen des Erstellers kann er
-				das Spiel finden und diesem beitreten. </br>
+				anschießend zwischen Player vs. Player oder Player - Player vs
+				Computer. <br /> Ihr Partner kann über „Mehrspieler“ => „Spiel
+				beitreten“ zur Lobby gelangen. Hier liegen alle erstellten Spiele.
+				Über den Spielnamen oder den Namen des Erstellers kann er das Spiel
+				finden und diesem beitreten. </br>
 				<h4>Im Spiel...</h4>
-				Im Spiel gehen Sie zunächst in den Shop (Oranger Button im Menü
+				Im Spiel gehen Sie zunächst in den Shop (oranger Button im Menü
 				oben). Hier können Sie ihrem Konto entsprechend Schiffe kaufen. Es
 				gibt zwei unterschiedliche Schifftypen. Schlachtschiffe sind
 				wesentlich teurer, allerdings auch wesentlich stärker als Jäger,
 				entscheiden Sie also weise. Bedenken Sie auch, je mehr Schiffe (egal
-				welchem Typs) Sie auf einem Planeten halten, desto größer sind die
+				welchen Typs) Sie auf einem Planeten halten, desto größer sind die
 				Steuereinnahmen. Maximal können Sie fünf Schiffe auf einem Planeten
-				stationieren.<br /> Nach dem Kauf, können Sie die Schiffe über die
-				„Plus-“ und „Minusbutton“ auf den Planeten verteilen. In der
+				stationieren.<br /> Nach dem Kauf können Sie die Schiffe mit dem
+				„Plus-“ oder „Minusbutton“ auf den Planeten verteilen. In der
 				Menüleiste können Sie erkennen, wie viele Schiffe noch nicht auf
-				Planeten verteilt wurden<br /> Ist Ihr Zug abgeschlossen beenden
+				Planeten verteilt wurden<br /> Ist Ihr Zug abgeschlossen, beenden
 				Sie die Runde über den grünen Button in der Menüleiste. Anschließend
 				werden die Kämpfe für jeden Planeten simuliert. Je mehr Schiffe
 				stationiert sind, desto größer ist die Wahrscheinlichkeit, den Kampf
 				zu gewinnen. Die Stärke jedes Schiffes berechnet sich aus dem Typ
 				und der Anzahl überstandener Schlachte. <br /> Nach jeder Runde
-				wird ihnen von geschlagenen Schlachten berichte. Es kommt zur
-				Schlacht, sobald Sie und Ihr Gegner versuchen Schiffe auf dem
-				gleichen Planeten zu stationieren. Dem Report können Sie entnehmen
-				auf welchen Planeten es zu Schlachten kam, welcher Spieler gesiegt
-				hat und wie viele Schiffe übriggeblieben sind. Sie erhalten zudem
-				eine Liste aller zerstörten Schiffe.
+				wird Ihnen über die geschlagenen Schlachten Bericht erstattet. Es
+				kommt zur Schlacht, sobald Sie und Ihr Gegner versuchen, Schiffe auf
+				dem gleichen Planeten zu stationieren. Dem Report können Sie
+				entnehmen, auf welchen Planeten es zu Schlachten kam, welcher
+				Spieler gesiegt hat und wie viele Schiffe übriggeblieben sind. Sie
+				erhalten zudem eine Liste aller zerstörten Schiffe.
+
 
 			</div>
 		</div>
