--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -35,13 +35,13 @@
 				</button>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				
-				
+
+
 				<div class="navbar-form navbar-center">
-				<button type="button" class="btn btn-danger" onclick="finishGame()">
-					<span class ="glyphicon glyphicon-chevron-left" aria-hidden="true">
-					</span>Spiel beenden 
-				</button>
+					<button type="button" class="btn btn-danger" onclick="finishGame()">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+						</span>Spiel beenden
+					</button>
 					<button type="button"
 						class="btn btn-default disabled disableButton">
 						Verfügbare Jäger <span id="fighter" class="badge">4</span>
@@ -99,17 +99,19 @@
 				<p>
 					<strong>Schlachtschiffe sind die Speerspitze Ihres
 						Imperiums!</strong><br />Sie sind im Kampf die ersten die angreifen, die
-					ersten, die Ihrer Stellungen halten. Jägern sind sie in
+					ersten, die Ihre Stellungen halten. Jägern sind sie in
 					Durchschlagskraft und Panzerung weit überlegen und darum Ihr
 					wichtigster Schutz.<br /> Schlachtschiffe sind eine Investition,
-					aber ihr Geld absolut Wert.
+					aber sie sind ihr Geld absolut wert.
 				</p>
 				<p>
-					Nach gewonnenen Schlachten können Ihre Schlachtschiffe vom Rang des
-					Captains bis zum Admiral of Fleet aufsteigen. Ihre Siegchancen
-					steigern somit nach jeder gewonnen Schlacht.<br /> <em>Ränge:</em>
-					Captain, Vice Admiral, Admiral, Admiral of Fleet
+					Nach gewonnenen Schlachten können die Commander Ihrer
+					Schlachtschiffe vom Rang des Captains bis zum Admiral of Fleet
+					aufsteigen. Ihre Siegchancen steigen somit nach jeder gewonnen
+					Schlacht.<br /> <em>Ränge:</em> Captain, Vice Admiral, Admiral,
+					Admiral of Fleet
 				</p>
+
 
 			</div>
 			<div class="btn-group center-button">
